<resources>
    <string name="app_name">practica5sccm</string>
    <string name="img1">Logo Tec</string>
    <string name="txt1">PRACTICA 5</string>
    <string name="txt2">SILVIA DEL CARMEN CARDONA MORENO</string>
    <string name="txt3">15-OCTUBRE-2019</string>
    <string name="txt4">OPERACIONES BÁSICAS</string>
    <string name="btn1">SALIR</string>
    <string name="btn2">MENU DE OPCIONES</string>
    <string name="txt5">MENU DE OPCIONES</string>
    <string name="txt6">1) SUMA</string>
    <string name="txt7">2)RESTA</string>
    <string name="txt8">3)MULTIPLICACION</string>
    <string name="txt9">4)DIVISIÓN</string>
    <string name="hopcion">ELIGE UNA OPCIÓN</string>
    <string name="btn3">ENVIAR</string>
    <string name="btn4">PANTALLA PRINCIPAL</string>
    <string name="txt10">SUMA</string>
    <string name="h1">Ingresa un Número</string>
    <string name="h2">Ingresa un Número</string>
    <string name="btn5">CALCULAR</string>
    <string name="h3">RESULTADO</string>
    <string name="btn6">REGRESAR AL MENÚ</string>
    <string name="txt11">RESTA</string>
    <string name="h4">Ingresa un Numero</string>
    <string name="h42">Ingresa un Número</string>
    <string name="h5">Ingresa un Número</string>
    <string name="btn7">CALCULAR</string>
    <string name="h6">RESULTADO</string>
    <string name="btn8">REGRESAR AL MENÚ</string>
    <string name="res">RESTA</string>
    <string name="h01">Ingresa un Número</string>
    <string name="h02">Ingresa un Número</string>
    <string name="boton1">CALCULAR</string>
    <string name="h03">RESULTADO</string>
    <string name="h033">RESULTADO</string>
    <string name="boton2">REGRESAR AL MENU</string>
    <string name="texto3">MULTIPLICACIÓN</string>
    <string name="hm1">Ingres un Numero</string>
    <string name="hm2">Ingresa un Numero</string>
    <string name="botonm">CALCULAR</string>
    <string name="hm3">RESULTADO</string>
    <string name="hit">Resultado</string>
    <string name="hm4">Resulya</string>
    <string name="hmn">Resultado</string>
    <string name="button">REGRESAR AL MENU</string>
</resources>
